--- a/src/components/Information.module.css
+++ b/src/components/Information.module.css
@@ -5,9 +5,9 @@
   align-items: flex-start;
   width: 90%;
   margin: 25px auto;
-  border: 1px solid red;
   padding: 15px;
-  height: 500px;
+
+  height: fit-content;
 }
 .mainDark {
   background-color: var(--black);
@@ -67,7 +67,7 @@
 @media screen and (width<=600px) {
   .main {
     height: 600px;
-    padding: 5px;
+    padding: 10px;
     width: fit-content;
     flex-wrap: wrap;
   }
